tests/Fixtures/Torture/Bad/compound_str.g
// EXPECT G004
kernel { entry func Main() { let int a = 0; a -= "x"; } }
